--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">MEET SHAH</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/home/meet/Downloads/WhatsApp Image 2020-02-08 at 12.31.12 PM.jpeg" alt="meet" /></span></a
+                ><span class="d-block d-lg-none">MEET SHAH</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="meet" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -41,7 +41,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">MEET <span class="text-primary">SHAH</span></h1> <br>
-		    <i class="fa fa-envelope" aria-hidden="true"></i></a> <div class="subheading mb-5">meetsuchitparinashah@gmail.com</div>
+		    <i class="fa fa-envelope" aria-hidden="true"></i></a> <div class="subheading mb-5"><a href="mailto:meetsuchitparinashah@gmail.com">meetsuchitparinashah@gmail.com</div>
 		    <i class="fa fa-phone"></i><div class="subheading mb-5">+91 9328243515</div>
                     <i class="fa fa-address-card" aria-hidden="true"></i><div class="subheading mb-5">303,Reliable Domicile Apt,Bengaluru, Karnataka-560100</div>
                     <p class="lead mb-5">Hey! I am Meet! Its great to have you here. I am a Gemini born on 19th June,1999 in Surat,Gujarat,India.I was born and brought up in Surat and am currently based in Bangalore,India. I am a computer science and engineering undergraduate student pursuing my bachelors of engineering from PES University ECC, Bengaluru. I am highly passionate about technology and communities and aspire to build products that help society become a better place through the means of technology and communities.I am up for a "Grab chai/coffee" session if you have anything to discuss regarding Tech,Product or Communities :) You can reach out to me on my social media handles or feel free to drop a mail :)</p>
