meet-shah profile and mail thanks

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ we organize technical meetups, competitions, workshops, sessions for students an
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Dec 2019</span></div>
                     </div>
-                                    </div>
+                      <p>Template from <a href = "https://startbootstrap.com/themes/resume/">StartBootstrap</a></p>              </div>
             </section>
                
         </div>
