--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ I was a junior brand manager at Think N Blink which is a delhi based event manag
                             <span class="fa-li"><i class="fas fa-check"></i></span>Python
                         </li>
                     </ul>
-		    <div class="subheading mb-3" style="line-height:1.6">Web Technologies and Frameworks</div>
+		    <div class="subheading mb-3" style="line-height:1.6">Web Technologies,Frameworks and Database</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>HTML
